--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -28,17 +28,46 @@ nav img{
 }
 
 
-.container{
+.container1{
     display: flex;
     flex-direction: column;
-    background-color: blueviolet;
+    padding-top: 120px;
 }
 
-.teste{
+.container2{
+    display: flex;
+    flex-direction: column;
+    padding-top: 40px;
+}
+
+.container3{
+    display: flex;
+    flex-direction: column;
+    padding-top: 40px;
+}
+
+h1{
+    margin-bottom: 20px;
+}
+
+.categoria1{
     display: flex;
     flex-direction: row;
     width: auto;
-    flex-wrap: wrap;
+    gap: 12px
+}
+
+.categoria2{
+    display: flex;
+    flex-direction: row;
+    width: auto;
+    gap: 12px
+}
+
+.categoria3{
+    display: flex;
+    flex-direction: row;
+    width: auto;
     gap: 12px
 }
 
@@ -49,13 +78,27 @@ background: #FCFCFC;
 border-radius: 16px;
 }
 
-.pratos img{
+.bebidas{
+width: 250px;
+height: 300px;
+background: #FCFCFC;
+border-radius: 16px;
+}
+
+.sobremesas{
+width: 250px;
+height: 290px;
+background: #FCFCFC;
+border-radius: 16px;
+}
+
+img{
     width: 250px;
     border-radius: 16px;
     margin-bottom: 10px;
 }
 
-.pratos .titulo{
+.titulo{
     font-weight: bold;
     margin-bottom: 20px;
     margin-left: 10px;
@@ -66,7 +109,7 @@ border-radius: 16px;
     margin-right: 10px;
 }
 
-.pratos .valor{
+.valor{
     font-weight: bold;
     margin-top: 20px;
     margin-left: 10px;
