--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -54,21 +54,21 @@ h1{
     display: flex;
     flex-direction: row;
     width: auto;
-    gap: 12px
+    gap: 15px
 }
 
 .categoria2{
     display: flex;
     flex-direction: row;
     width: auto;
-    gap: 12px
+    gap: 15px
 }
 
 .categoria3{
     display: flex;
     flex-direction: row;
     width: auto;
-    gap: 12px
+    gap: 15px
 }
 
 .pratos{
@@ -113,4 +113,64 @@ img{
     font-weight: bold;
     margin-top: 20px;
     margin-left: 10px;
+}
+
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 70px;
+    background-color: gray;
+    position: fixed;
+    bottom:0;
+}
+
+.botao{
+    width: 80%;
+    height: 50px;
+    background-color: lightgray;
+    border-radius: 30px;
+    text-align: center;
+    color:darkslategrey;
+    font-weight: bold;
+    margin-top: 2px;
+    align-content: center;
+}
+
+.resumo{
+    width: 100%;
+    height: 100vh;
+    background-color: green;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.ctf{
+    font-weight: bold;
+    font-size: 32px;
+    text-align: center;
+    color: white;
+    margin-bottom: 30px;
+}
+
+.res{
+    font-size: 14px;
+    color: white;
+    text-align: center;
+    line-height: 35px;
+}
+
+.confirm{
+    width: 10%;
+    height: 40px;
+    background-color: lightgray;
+    border-radius: 30px;
+    text-align: center;
+    color:darkslategrey;
+    margin-top: 2px;
+    align-content: center;
+    margin-top: 25px;
 }
