--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -48,7 +48,7 @@ nav img {
   flex-direction: column;
   padding-top: 60px;
   margin-bottom: 80px;
-  margin: 1rem;
+  margin-left: 13px;
 }
 
 h1 {
